--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,9 +63,9 @@
 
     <style name="Plaid.DesignerNews.Story" />
 
-    <style name="Plaid.Translucent.Dribbble" />
+<!--    <style name="Plaid.Translucent.Dribbble" />-->
 
-    <style name="Plaid.Translucent.Dribbble.Shot" />
+<!--    <style name="Plaid.Translucent.Dribbble.Shot" />-->
 
     <style name="Plaid.Translucent.Search" />
 
